fix: remove overflow: hidden in body to scroll

--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@ body {
     display: flex;
     padding-top: 5rem;
     justify-content: center;
-    overflow: hidden;
     margin: 0;
     flex-direction: column;
     align-items: center;
